Header casi completp!

--- a/Index.html
+++ b/Index.html
@@ -10,18 +10,18 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="nav-right-section">
                <li>
-                   <a href="">Gmail</a>
+                   <a href="https://mail.google.com/mail/?authuser=0&ogbl">Gmail</a>
                 </li>
                <li>
-                   <a href="">Imagenes</a>
+                   <a href="https://www.google.com.mx/imghp?hl=es-419&authuser=0&ogbl">Imagenes</a>
                 </li>
-                <li>
-                   <a href="">Icon</a>
+                <li class="menu-icon">
+                   <a href=""></a>
                 </li>
                <li>
-                   <a href="">Photo</a>
+                   <a href=""><img src="https://lh3.googleusercontent.com/ogw/ADGmqu8QByABYDBNHCT5H_Y-Za0ZZs7z84E8gH_za7Dl=s32-c-mo" alt="foto de perfil"></a>
                 </li>
             </ul> 
         </nav>
