Se finalizo el cuerpo del proyecto

--- a/Index.html
+++ b/Index.html
@@ -32,8 +32,7 @@
         </section>
         <section class="main-input">
             <div class="main-input-container">
-                <span class="search-icon">
-                </span>
+                <span class="search-icon"></span>
                 <input type="text">
                 <a class="micro-icon" href=""></a>
             </div>
@@ -46,7 +45,7 @@
             </div>
             <div>
                 <button>
-                    Me siento con Suerte
+                    Me siento con suerte
                 </button>
             </div>
         </section>
